#894 : chevron alignment fix

--- a/packages/dso-toolkit/src/styles/components/_dropdown.scss
+++ b/packages/dso-toolkit/src/styles/components/_dropdown.scss
@@ -12,6 +12,9 @@ $dso-dropdown-hor-padding: 20px;
   > .btn-link {
     &::after {
       @include di("chevron-down");
+
+      position: relative;
+      top: -2px;
     }
 
     &:hover {
